--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 										<h2>About</h2>
 										<p>Who are these people, anyway?</p>
 									</header>
-									<span class="image left smaller"><img src="images/placid.jpg" alt="" /></span>
+									<span class="image left smaller"><img src="images/placid.JPG" alt="" /></span>
 
 									<p>If you got a save-the-date and are now here you should know at least one of us already, but 
 									we'll give a refresher just in case.</p>
