why was that the solution

--- a/guests.html
+++ b/guests.html
@@ -52,7 +52,7 @@
 									<header>
 										<h2>For Guests Coming from Out of Town</h2>
 									</header>
-									<span class="image left"><img src="images/sports.jpg" alt="" /></span>
+									<span class="image left"><img src="images/sports.JPG" alt="" /></span>
 
 									<p>We are so thankful for our family and friends coming from far away to celebrate with us. We'd like to welcome you to a few additional events while you're in town, and there will be information in this space soon.</p>
 									<h3>Events</h3>
