--- a/location.html
+++ b/location.html
@@ -53,7 +53,7 @@
 										<h2>Location</h2>
 										<p>Battery Gardens, NYC</p>
 									</header>
-									<span class="image left"><img src="images/citywide.jpg" alt="" /></span>
+									<span class="image left"><img src="images/citywide.JPG" alt="" /></span>
 
 									<p>Come join Sarah, Johari and our families for a wedding ceremony and reception at Battery Gardens, located in Battery Park at the bottom tip of Manhattan.</p>
 
