get outta here robots

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 									<span class="image left smaller"><img src="images/placid.JPG" alt="" /></span>
 
 									<p>If you got a save-the-date and are now here you should know at least one of us already, but 
-									we'll give a refresher just in case.</p>
+									here's a refresher just in case.</p>
 
 									<h3>About the Bride and Groom</h3>
 									
@@ -65,21 +65,21 @@
 									legal assistant. Outside of work, Johari can be found playing video games, being asked to define 
 									science terms, and working on his musical adaptation of Shakespeare's "Julius Caesar." Sarah can 
 									be found reading, looking at pictures of tiny robots on the internet, and trying to remember how 
-									to make websites. We can both be found singing excerpts from musicals to one another 
+									to make websites. They can both be found singing excerpts from musicals to one another 
 									with no particular prompting.</p>
-									<p>The duo met in eighth grade, but didn't become close friends until Sarah asked Johari to prom 
-									Junior year in the midst of the spring musical rehearsal process. Immediately after asking, Sarah 
+									<p>Sarah and Johari met in eighth grade, but didn't become close friends until Sarah asked Johari to prom 
+									Junior year during the spring musical rehearsal process. Immediately after asking, Sarah 
 									had a voice lesson, and after that she fell into a ditch next to the stairs leading to the school 
-									parking lot and broke her foot. However, that didn't stop a very fun prom which prominently featured 
-									a decorated red cast.</p>
-									<p>After that — despite Johari's best efforts — they didn't begin dating until midway through 
+									parking lot and broke her foot.</p>
+									<p>They still had a good time at prom, though, and Sarah had an excellently decorated red cast.</p>
+									<p>After that — despite Johari's best efforts — the duo didn't begin dating until midway through 
 									Freshman year of college, spending endless hours talking on Facebook chat (until it became unusable) 
 									and then Google chat, and finally beginning a long-distance relationship.</p>
 									<p>It's been seven and a half years since then; college for math and physics (respectively), 
-									graduate school and a professional acting program (respectively) have come and gone, and it 
-									seemed like it was finally time to make their love and the life they're building together official. 
-									(Even more official than the couple's Facebook relationship statuses, which were momentously updated in 
-									February of 2010.)</p>
+									graduate school and a professional acting program (respectively) have come and gone. It  
+									seemed like it was finally time for Sarah and Johari to make their love and the life they're building 
+									together official. (Even more official than the couple's Facebook relationship statuses, which were 
+									momentously updated in February of 2010.)</p>
 									<p>We hope you can join us to celebrate embarking on that journey.</p>
 									<h3>News</h3>
 									<p>We're <a href="http://www.clevelandjewishnews.com/community/lifecycles/engagements/lewin-frasier/article_e2c9f90a-302c-11e7-b3ba-6b2d5db40b61.html">
