--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 						</header>
 					</div>
 				</section>
+				<section class="wrapper style1" style="padding:0.5em">
+
+					</section>
+
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
