--- a/about.html
+++ b/about.html
@@ -55,13 +55,13 @@
 									</header>
 									<span class="image left smaller"><img src="images/placid.JPG" alt="" /></span>
 
-									<p>If you got a save-the-date and are now here you should know at least one of us already, but 
+									<p>If you got a save-the-date and are now here you probably know at least one of us already, but 
 									here's a refresher just in case.</p>
 
 									<h3>About the Bride and Groom</h3>
 									
-									<p>Sarah and Johari live in New York City; Sarah is a staff writer at Space.com, where she writes
-									and edits for fun and profit, and Johari is an actor and composer who spends late nights as a 
+									<p>Sarah and Johari live in New York City; Sarah is an associate editor at Space.com, where she edits 
+									and writes for fun and profit, and Johari is an actor and composer who spends late nights as a 
 									legal assistant. Outside of work, Johari can be found playing video games, being asked to define 
 									science terms, and working on his musical adaptation of Shakespeare's "Julius Caesar." Sarah can 
 									be found reading, looking at pictures of tiny robots on the internet, and trying to remember how 
