--- a/location.html
+++ b/location.html
@@ -60,7 +60,7 @@
 									<h3>Dates and times</h3>
 									<p><strong>The wedding will begin at 5:30 p.m. at Battery Gardens.</strong></p>
 
-									<p>You can reach Battery Park via serveral subway lines, and we will add more detailed directions and parking information on this website later. For out-of-town guests, there will be hotel information and suggestions available on a different tab.</p>
+									<p>You can reach Battery Park via serveral subway lines as well as a <a href="http://www.downtownny.com/programs/downtown-connection-bus">free downtown bus line</a>, and we will add more detailed directions and parking information on this website later. For out-of-town guests, there will be hotel information and suggestions available on their own page.</p>
 									<p>We hope you'll be able to come celebrate with us in New York City!</p>
 								</article>
 						</div>
