--- a/moreinfo.html
+++ b/moreinfo.html
@@ -53,7 +53,7 @@
 										<h2>More Information</h2>
 										<p></p>
 									</header>
-									<span class="image left smaller"><img src="images/dance1.jpg" alt="" /></span>
+									<span class="image left smaller"><img src="images/ballnarrower.jpg" alt="" /></span>
 
 									<p>Thank you for visiting our wedding website! Check back later for more information here, as advertised.</p>
 
