--- a/guests.html
+++ b/guests.html
@@ -32,7 +32,7 @@
 									<ul>
 										<li><a href="guests.html">Events</a></li>
 										<li><a href="hotels.html">Hotels</a></li>
-										<li><a href="other.html">Other Details</a></li>
+										<li><a href="guests.html">Other Details</a></li>
 									</ul>
 								<li><a href="moreinfo.html">More Information</a></li>
 							</ul>
