--- a/other.html
+++ b/other.html
@@ -31,8 +31,8 @@
 								<li class="current"><a href="guests.html">Out-of-Town Guests</a>
 									<ul>
 										<li><a href="guests.html">Events</a></li>
-										<li><a href="hotels.html">Hotels</a></li>
-										<li><a href="other.html">Other Details</a></li>
+										<li><a href="guests.html">Hotels</a></li>
+										<li><a href="guests.html">Other Details</a></li>
 									</ul>
 								<li><a href="moreinfo.html">More Information</a></li>
 							</ul>
@@ -52,7 +52,7 @@
 									<header>
 										<h2>For Guests Coming from Out of Town</h2>
 									</header>
-									<span class="image left"><img src="images/may.JPG" alt="" /></span>
+									<span class="image left"><img src="images/may.jpg" alt="" /></span>
 
 									<p>We are so thankful for our family and friends coming from far away to celebrate with us. We'd like to welcome you to a few additional events while you're in town, and there will be information in this space soon.</p>
 									<h3>Events</h3>
