--- a/guests.html
+++ b/guests.html
@@ -31,7 +31,7 @@
 								<li class="current"><a href="guests.html">Out-of-Town Guests</a>
 									<ul>
 										<li><a href="guests.html">Events</a></li>
-										<li><a href="hotels.html">Hotels</a></li>
+										<li><a href="guests.html">Hotels</a></li>
 										<li><a href="guests.html">Other Details</a></li>
 									</ul>
 								<li><a href="moreinfo.html">More Information</a></li>
