--- a/other.html
+++ b/other.html
@@ -31,8 +31,8 @@
 								<li class="current"><a href="guests.html">Out-of-Town Guests</a>
 									<ul>
 										<li><a href="guests.html">Events</a></li>
-										<li><a href="guests.html">Hotels</a></li>
-										<li><a href="guests.html">Other Details</a></li>
+										<li><a href="hotels.html">Hotels</a></li>
+										<li><a href="other.html">Other Details</a></li>
 									</ul>
 								<li><a href="moreinfo.html">More Information</a></li>
 							</ul>
