--- a/guests.html
+++ b/guests.html
@@ -30,7 +30,7 @@
 								<li><a href="location.html">Location</a></li>
 								<li class="current"><a href="guests.html">Out-of-Town Guests</a>
 									<ul>
-										<li><a href="guests.html">Events</a></li>
+										<li><a href="guests.html">Welcome</a></li>
 										<li><a href="guests.html">Hotels</a></li>
 										<li><a href="guests.html">Other Details</a></li>
 									</ul>
@@ -54,11 +54,9 @@
 									</header>
 									<span class="image left"><img src="images/sports.JPG" alt="" /></span>
 
-									<p>We are so thankful for our family and friends coming from far away to celebrate with us. We'd like to welcome you to a few additional events while you're in town, and there will be information in this space soon.</p>
-									<h3>Events</h3>
-									<p>Hello early website readers! Check back later for more details.<p>
+									<p>We are so thankful for our family and friends coming from far away to celebrate with us. Check back for more information in this space soon that will be helpful for your stay.</p>
 									<h3>Hotels</h3>
-									<p>Same here; more to come.</p>
+									<p>Hello early website readers! Check back later for more details.</p>
 									<h3>Other Details</h3>
 									<p>You guessed it! This will be filled in later, and will be its own fancy page!</a>
 								</article>
