--- a/location.html
+++ b/location.html
@@ -30,7 +30,7 @@
 								<li class="current"><a href="location.html">Location</a></li>
 								<li><a href="guests.html">Out-of-Town Guests</a>
 									<ul>
-										<li><a href="guests.html">Events</a></li>
+										<li><a href="guests.html">Main</a></li>
 										<li><a href="guests.html">Hotels</a></li>
 										<li><a href="guests.html">Other Details</a></li>
 									</ul>
