--- a/guests.html
+++ b/guests.html
@@ -54,11 +54,11 @@
 									</header>
 									<span class="image left"><img src="images/sports.JPG" alt="" /></span>
 
-									<p>We are so thankful for our family and friends coming from far away to celebrate with us. Check back for more information in this space soon that will be helpful for your stay.</p>
+									<p>We are so thankful for our family and friends coming from far away to celebrate with us.</p><p>Check back for more information in this space soon that will be helpful for your stay.</p>
 									<h3>Hotels</h3>
 									<p>Hello early website readers! Check back later for more details.</p>
 									<h3>Other Details</h3>
-									<p>You guessed it! This will be filled in later, and will be its own fancy page!</a>
+									<p>You guessed it! This will be filled in later, and will be its own fancy page!</p>
 								</article>
 						</div>
 					</div>
