--- a/guests.html
+++ b/guests.html
@@ -32,9 +32,9 @@
 								<li><a href="location.html">Location</a></li>
 								<li class="current"><a href="guests.html">Out-of-Town Guests</a>
 									<ul>
-										<li><a href="guests.html">Welcome</a></li>
-										<li><a href="guests.html">Hotels</a></li>
-										<li><a href="guests.html">Other Details</a></li>
+										<li><a href="guests.html">Main</a></li>
+										<li><a href="hotels.html">Hotels</a></li>
+										<li><a href="other.html">Other Details</a></li>
 									</ul>
 								<li><a href="moreinfo.html">More Information</a></li>
 							</ul>
@@ -56,11 +56,17 @@
 									</header>
 									<span class="image left"><img src="images/sports.JPG" alt="" /></span>
 
-									<p>We are so thankful for our family and friends coming from far away to celebrate with us.</p><p>Check back for more information in this space soon that will be helpful for your stay.</p>
-									<h3>Hotels</h3>
-									<p>Hello early website readers! Check back later for more details.</p>
-									<h3>Other Details</h3>
-									<p>You guessed it! This will be filled in later, and will be its own fancy page!</p>
+									<p>We are so thankful for our family and friends coming from far away to celebrate with us. We've selected <a href="hotels.html">hotels</a> near the wedding venue that you can get special rates on, 
+									so we hope you can easily get to us or explore the city!</p>
+									<h3>Getting Around</h3>
+									<p>The easiest way to get to the venue from the hotels we've chosen is to walk or take a cab; they range from 
+									a 6 to 17 minute walk, or less than 10 minute cab ride in lighter traffic. (As always in New York, cabs may take longer 
+									than one might hope during busy times!)</p>
+									<p>For the two slightly further hotels you can also very easily take the R or W train on the subway downtown to Whitehall Street in about 8 minutes.
+									The 4, 5 and 1 trains also stop near Battery Gardens, at Bowling Green (4, 5) and South Ferry (1), if you are 
+									staying somewhere different that's closer to those trains.</p>
+									<p>All of these locations and subway lines can be navigated using <a href="https://www.google.com/maps/dir//Battery+Gardens+Restaurant,+1+Battery+Pl,+New+York,+NY+10004/@40.7014409,-74.0173282,17z/data=!4m16!1m6!3m5!1s0x89c25a12583fce4d:0x44f0325720018cf!2sBattery+Gardens+Restaurant!8m2!3d40.7014409!4d-74.0151395!4m8!1m0!1m5!1m1!1s0x89c25a12583fce4d:0x44f0325720018cf!2m2!1d-74.0151395!2d40.7014409!3e3">Google Maps</a>
+									if you want to chart a course.</p>
 								</article>
 						</div>
 					</div>
