--- a/hotels.html
+++ b/hotels.html
@@ -52,15 +52,37 @@
 
 								<article>
 									<header>
-										<h2>For Guests Coming from Out of Town</h2>
+										<h2>Hotels</h2>
 									</header>
 									<span class="image left"><img src="images/glasses.JPG" alt="" /></span>
 
-									<p>We are so thankful for our family and friends coming from far away to celebrate with us.</p><p>Check back for more information in this space soon that will be helpful for your stay.</p>
-									<h3>Hotels</h3>
-									<p>Hello early website readers! Check back later for more details.</p>
-									<h3>Other Details</h3>
-									<p>You guessed it! This will be filled in later, and will be its own fancy page!</p>
+									<h3>Come stay with us in New York City!</h3>
+									<p>We have room blocks reserved at three nearby hotels. Reservations can be made through links included below or by calling the hotel directly and giving our group code.
+									<p><strong>Note: room rates are good until 30 days prior to the wedding, but can sell out much earlier. If you can, make reservations ASAP.</strong> The cancellation policies are shown 
+									below and seem to generally be that you can cancel within 72 hours of check-in.</p>
+									<p>We also have a link to group rates at a lot of different hotels through Hotels.com, but if you're interested in the three below you should book through our code/link instead for a better rate.
+									The three hotels below are also within easy walking/<a href="guests.html">transportation</a> distance of Battery Gardens and the site of any other festivities.</p>
+									<h3>DoubleTree by Hilton Hotel New York City – Financial District</h3>
+									<p><strong>8 Stone Street, New York, NY  10004 (0.3 miles from wedding venue)</strong>
+									<br/>King rooms $179/night; two doubles $199/night
+									<br/>(Cancellation policy: Not sure yet!)
+									<br/><br/>Call the hotel at 212-480-9100 and use group code LEW or <a href="http://doubletree3.hilton.com/en/hotels/new-york/doubletree-by-hilton-hotel-new-york-city-financial-district-NYCBPDT/index.html">book online</a> with same code.</p>
+	
+									<h3>Millenium Hilton New York Downtown</h3>
+									<p><strong>55 Church Street, New York, NY 10007 (0.8 miles from wedding venue)</strong>
+									<br/>King rooms $180/night; two doubles $219/night
+									<br/>Cancellation without charge up to 72 hours prior to check-in
+									<br/><br/>Call Hilton to book at 800-445-8667 and use group code LFWED
+									<br/>Or use <a href="https://secure3.hilton.com/en_US/hi/reservation/book.htm?inputModule=HOTEL&ctyhocn=NYCMLHH&spec_plan=LFWED&arrival=20180504&departure=20180507&cid=OM,WW,HILTONLINK,EN,DirectLink&fromId=HILTONLINKDIRECT">this link</a> to book.</p>
+
+									<h3>Courtyard New York Downtown Manhattan/World Trade Center Area</h3>
+									<p><strong>133 Greenwich St, New York, NY 10006 (0.7 miles from wedding venue)</strong>
+									<br/>King rooms $209/night; Two doubles $219/night
+									<br/>Cancellation without charge up to 72 hours prior to check-in
+									<br/><br/>Call the hotel at 212-346-0088 and tell them you are with the Lewin-Frasier wedding
+									<br/>Or use <a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=LEWIN%20-%20FRASIER%20WEDDING%5Enycxm%60lfwlfwa%7Clfwlfwc%60209-219%60USD%60false%604%605/4/18%605/6/18%604/13/18&app=resvlink&stop_mobi=yes">this link</a> to book.</p>
+									
+									<p>You can also get cheaper group rates for other hotels through Hotels.com at <a href="https://groups.hotels.com/EventPage4052642">this link</a> – but if you’re interested in any of the hotels above, you should book through the above links instead, because we negotiated with them specifically and the rates are better.</p>
 									</article>
 						</div>
 					</div>
