--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 								<li><a href="guests.html">Out-of-Town Guests</a>
 									<ul>
 										<li><a href="guests.html">Main</a></li>
-										<li><a href="guests.html">Hotels</a></li>
-										<li><a href="guests.html">Other Details</a></li>
+										<li><a href="hotels.html">Hotels</a></li>
+										<li><a href="other.html">Other Details</a></li>
 									</ul>
 								<li><a href="moreinfo.html">More Information</a></li>
 							</ul>
