--- a/location.html
+++ b/location.html
@@ -33,8 +33,8 @@
 								<li><a href="guests.html">Out-of-Town Guests</a>
 									<ul>
 										<li><a href="guests.html">Main</a></li>
-										<li><a href="guests.html">Hotels</a></li>
-										<li><a href="guests.html">Other Details</a></li>
+										<li><a href="hotels.html">Hotels</a></li>
+										<li><a href="other.html">Other Details</a></li>
 									</ul>
 								<li><a href="moreinfo.html">More Information</a></li>
 							</ul>
@@ -62,7 +62,8 @@
 									<h3>Dates and times</h3>
 									<p><strong>The wedding will begin at 5:30 p.m. at Battery Gardens.</strong></p>
 
-									<p>You can reach Battery Park via serveral subway lines as well as a <a href="http://www.downtownny.com/programs/downtown-connection-bus">free downtown bus line</a>, and we will add more detailed directions and parking information on this website later. For out-of-town guests, there will be hotel information and suggestions available on their own page.</p>
+									<p>You can reach Battery Park via serveral subway lines as well as a <a href="http://www.downtownny.com/programs/downtown-connection-bus">free downtown bus line</a>, and we will add more detailed directions and parking information on this website later.</p>
+									<p>For out-of-town guests, check out <a href="hotels.html">hotel information</a> and <a href="guests.html">more details</a>.</p>
 									<p>We hope you'll be able to come celebrate with us in New York City!</p>
 								</article>
 						</div>
