--- a/other.html
+++ b/other.html
@@ -52,15 +52,11 @@
 
 								<article>
 									<header>
-										<h2>For Guests Coming from Out of Town</h2>
+										<h2>For Guests Coming from Out of Town: More Details</h2>
 									</header>
 									<span class="image left"><img src="images/may.jpg" alt="" /></span>
-
-									<p>We are so thankful for our family and friends coming from far away to celebrate with us.</p><p>Check back for more information in this space soon that will be helpful for your stay.</p>
-									<h3>Hotels</h3>
-									<p>Hello early website readers! Check back later for more details.</p>
-									<h3>Other Details</h3>
-									<p>You guessed it! This will be filled in later, and will be its own fancy page!</p>								</article>
+									<p>Hello early website readers! We'll drop some more information here about coming from out of town later on, so be sure to check back. You can also look at <a href="hotels.html">hotel information here</a>.</p>
+									</article>
 						</div>
 					</div>
 				</section>
