--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Welcome to our wedding website!</h2>
-							<p>This website will be updated with many more details, so check back again later, too</p>
+							<p>NEWLY UPDATED: <a href="guests.html">Out-of-Town Guests</a>, <a href="hotels.html">Hotels</a>. Check back later for more!</p>
 						</header>
 					</div>
 				</section>
