--- a/other.html
+++ b/other.html
@@ -54,7 +54,7 @@
 									<header>
 										<h2>For Guests Coming from Out of Town: More Details</h2>
 									</header>
-									<span class="image left"><img src="images/may.jpg" alt="" /></span>
+									<span class="image left"><img src="images/dance1.jpg" alt="" /></span>
 									<p>Hello early website readers! We'll drop some more information here about coming from out of town later on, so be sure to check back. You can also look at <a href="hotels.html">hotel information here</a>.</p>
 									</article>
 						</div>
