--- a/hotels.html
+++ b/hotels.html
@@ -59,13 +59,13 @@
 									<h3>Come stay with us in New York City!</h3>
 									<p>We have room blocks reserved at three nearby hotels. Reservations can be made through links included below or by calling the hotel directly and giving our group code.
 									<p><strong>Note: room rates are good until 30 days prior to the wedding, but can sell out much earlier. If you can, make reservations ASAP.</strong> The cancellation policies are shown 
-									below and seem to generally be that you can cancel within 72 hours of check-in.</p>
+									below and let you cancel your reservation within three days (or one day, in one case) of the event.</p>
 									<p>We also have a link to group rates at a lot of different hotels through Hotels.com, but if you're interested in the three below you should book through our code/link instead for a better rate.
 									The three hotels below are also within easy walking/<a href="guests.html">transportation</a> distance of Battery Gardens and the site of any other festivities.</p>
 									<h3>DoubleTree by Hilton Hotel New York City – Financial District</h3>
 									<p><strong>8 Stone Street, New York, NY  10004 (0.3 miles from wedding venue)</strong>
 									<br/>King rooms $179/night; two doubles $199/night
-									<br/>(Cancellation policy: Not sure yet!)
+									<br/>Cancellation without charge up to 24 hours prior to check-in
 									<br/><br/>Call the hotel at 212-480-9100 and use group code LEW or <a href="http://doubletree3.hilton.com/en/hotels/new-york/doubletree-by-hilton-hotel-new-york-city-financial-district-NYCBPDT/index.html">book online</a> with same code.</p>
 	
 									<h3>Millenium Hilton New York Downtown</h3>
