--- a/hotels.html
+++ b/hotels.html
@@ -67,7 +67,7 @@
 									<br/>King rooms $179/night; two doubles $199/night
 									<br/>Cancellation without charge up to 24 hours prior to check-in
 									<br/><br/>Call the hotel at 212-480-9100 and use group code LEW or <a href="http://doubletree3.hilton.com/en/hotels/new-york/doubletree-by-hilton-hotel-new-york-city-financial-district-NYCBPDT/index.html">book online</a> with same code.</p>
-									<p>If that doesn't work or bring up the correct room, you can email Catherine Severino directly (or call her) to book the rooms. Her email is catherine.severino@hilton.com and her direct phone number is 646-439-2233.</p> 
+									<p>If that doesn't work or bring up the correct room pricing, you can email Catherine Severino directly (or call her) to book rooms. Her email is catherine.severino@hilton.com and her direct phone number is 646-439-2233.</p> 
 	
 									<h3>Millenium Hilton New York Downtown</h3>
 									<p><strong>55 Church Street, New York, NY 10007 (0.8 miles from wedding venue)</strong>
