--- a/hotels.html
+++ b/hotels.html
@@ -74,7 +74,7 @@
 									<br/>King rooms $180/night; two doubles $219/night
 									<br/>Cancellation without charge up to 72 hours prior to check-in
 									<br/><br/>Call Hilton to book at 800-445-8667 and use group code LFWED
-									<br/>Or use <a href="https://secure3.hilton.com/en_US/hi/reservation/book.htm?inputModule=HOTEL&ctyhocn=NYCMLHH&spec_plan=LFWED&arrival=20180504&departure=20180507&cid=OM,WW,HILTONLINK,EN,DirectLink&fromId=HILTONLINKDIRECT">this link</a> to book.</p>
+									<br/>Or use <a href="http://www.hilton.com/en/hi/groups/personalized/N/NYCMLHH-LFWED-20180504/index.jhtml?WT.mc_id=POG">this link</a> to book.</p>
 
 									<h3>Courtyard New York Downtown Manhattan/World Trade Center Area</h3>
 									<p><strong>133 Greenwich St, New York, NY 10006 (0.7 miles from wedding venue)</strong>
