--- a/hotels.html
+++ b/hotels.html
@@ -83,7 +83,7 @@
 									<br/><br/>Call the hotel at 212-346-0088 and tell them you are with the Lewin-Frasier wedding
 									<br/>Or use <a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=LEWIN%20-%20FRASIER%20WEDDING%5Enycxm%60lfwlfwa%7Clfwlfwc%60209-219%60USD%60false%604%605/4/18%605/6/18%604/13/18&app=resvlink&stop_mobi=yes">this link</a> to book.</p>
 									
-									<p>You can also get cheaper group rates for other hotels through Hotels.com at <a href="https://groups.hotels.com/EventPage4052642">this link</a> – but if you’re interested in any of the hotels above, you should book through the above links instead, because we negotiated with them specifically and the rates are better.</p>
+									<p>You can also get cheaper group rates for other hotels through Hotels.com at <a href="https://groups.hotels.com/EventPage4052642">this link</a> — but if you’re interested in any of the hotels above, you should book through the above links instead, because we negotiated with them specifically and the rates are better.</p>
 									</article>
 						</div>
 					</div>
