--- a/moreinfo.html
+++ b/moreinfo.html
@@ -57,10 +57,13 @@
 									</header>
 									<span class="image left smaller"><img src="images/ballnarrower.jpg" alt="" /></span>
 
-									<p>Thank you for visiting our wedding website! Check back later for more information here, as advertised.</p>
-									
-									<h3></h3>
-									<p></p>
+									<p>You've made it all the way through the website! Congratulations!</p>									
+									<h3>Gifts</h3>
+									<p>Thank you for celebrating our wedding with us! We don't know where our lives will take us in the coming years, and so if you'd like to give a gift, 
+									helping us save to fill and furnish our next home would be incredibly generous. For now, we have each other — but not room for much else!</p>
+									<p>If you'd prefer, we have also included a smaller registry of gifts that will (hopefully) fit where we are now.</p>
+									<p>For home goods, <a href="https://www.macys.com/wgl/registry/guest/6896157">see our registry at Macy's</a>.</p>
+									<p>For electronics, <a href="https://www.amazon.com/wedding/share/sarahxjohari">see our registry on Amazon</a>.</p>
 								</article>
 						</div>
 					</div>
