--- a/moreinfo.html
+++ b/moreinfo.html
@@ -58,7 +58,10 @@
 									<span class="image left smaller"><img src="images/ballnarrower.jpg" alt="" /></span>
 
 									<p>You've made it all the way through the website! Congratulations!</p>									
-									<h3>Gifts</h3>
+									<h3>Food</h3>
++									<p>Guests will choose an entree at Battery Gardens at the start of the reception. If you have any dietary concerns or questions, you can email Sarah
++										 at sarahosmile (at) gmail. There will be a vegetarian entree available on request, and you know we can do gluten free! Happy to go through the menu with you.</p>
+ 									<h3>Gifts</h3>
 									<p>Thank you for celebrating our wedding with us! We don't know where our lives will take us in the coming years, and so if you'd like to give a gift, 
 									helping us save to fill and furnish our next home would be incredibly generous. For now, we have each other — but not room for much else!</p>
 									<p>If you'd prefer, we have also included a smaller registry of gifts that will (hopefully) fit where we are now.</p>
