--- a/location.html
+++ b/location.html
@@ -62,7 +62,8 @@
 									<h3>Dates and times</h3>
 									<p><strong>The wedding will begin at 5:30 p.m. at Battery Gardens.</strong></p>
 
-									<p>You can reach Battery Park via serveral subway lines as well as a <a href="http://www.downtownny.com/programs/downtown-connection-bus">free downtown bus line</a>, and we will add more detailed directions and parking information on this website later.</p>
+									<p>You can reach Battery Park via serveral subway lines as well as a <a href="http://www.downtownny.com/programs/downtown-connection-bus">free downtown bus line</a>, and the nearest public parking garage is a Quik Park facility on Whitehall St. (just south of State Street, near the intersection of Whitehall
+& State St.), about 1 block east of Battery Gardens. To take a cab, you can ask to be dropped off at 17 State St. and walk across the street and then about one block into the park. The back parking lot for Battery Gardens, to drop off guests who can't easily walk through the park, is located at 1 South St.</p>
 									<p>For out-of-town guests, check out <a href="hotels.html">hotel information</a> and <a href="guests.html">more details</a>.</p>
 									<p>We hope you'll be able to come celebrate with us in New York City!</p>
 								</article>
