--- a/guests.html
+++ b/guests.html
@@ -65,6 +65,7 @@
 									<p>For the two slightly further hotels you can also very easily take the R or W train on the subway downtown to Whitehall Street in about 8 minutes.
 									The 4, 5 and 1 trains also stop near Battery Gardens, at Bowling Green (4, 5) and South Ferry (1), if you are 
 									staying somewhere different that's closer to those trains.</p>
+									<p>If taking a cab, you can ask to be dropped off at 17 State St. and walk across the street; Battery Gardens is about one block into the park. The back parking lot for Battery Gardens, to drop off guests who can't easily walk through the park, is located at 1 South St.</p>
 									<p>All of these locations and subway lines can be navigated using <a href="https://www.google.com/maps/dir//Battery+Gardens+Restaurant,+1+Battery+Pl,+New+York,+NY+10004/@40.7014409,-74.0173282,17z/data=!4m16!1m6!3m5!1s0x89c25a12583fce4d:0x44f0325720018cf!2sBattery+Gardens+Restaurant!8m2!3d40.7014409!4d-74.0151395!4m8!1m0!1m5!1m1!1s0x89c25a12583fce4d:0x44f0325720018cf!2m2!1d-74.0151395!2d40.7014409!3e3">Google Maps</a>
 									if you want to chart a course.</p>
 								</article>
