shed a tear it wasn't caps

--- a/photos.html
+++ b/photos.html
@@ -54,7 +54,7 @@
 									<header>
 										<h2>Photos</h2>
 									</header>
-									<span class="image left"><img src="images/may.JPG" alt="" /></span>
+									<span class="image left"><img src="images/may.jpg" alt="" /></span>
 									<h3>Take some awesome wedding shots?</h3>
 									<p><strong>Tag them on social media with #SarahxJohari</strong></p>
 
