--- a/photos.html
+++ b/photos.html
@@ -60,6 +60,7 @@
 
 									<p>For true photo mavens, you can <a href="https://docs.google.com/forms/d/e/1FAIpQLScFpjzAtXaPSZKGG07775dwpP-Hns0aPa5vrdcIuA8_l54zzA/viewform?usp=sf_link" target="_blank"><strong>upload your photos online here</strong></a>!</p>
 									<p>See all photos that have been added <a href="https://drive.google.com/open?id=0B6Vu81ekvmLAfmtRVUhNdlM1X0wzRDRVbWhicDNaenpuYWs5UUZZeXg5anBIWXhaenhsVVk" target="_blank"><strong>here</strong></a>.</p>
+									<p>Plus, see two awesome preview photos from our photographer <a href="https://www.instagram.com/p/BietUYRHaFI/">here</a> and <a href="https://www.instagram.com/p/BicB6N_BtPn/">here</a>!</p>
 									<p>You will need a Gmail or Google account to add photos — if you don't have one, feel free to email the pics to sarahosmile (at) gmail to be added. No account needed to see them!</p>
 								</article>
 						</div>
